kubernetes/grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:7.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: grafana
  sessionAffinity: None
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garafana-80
  annotations:
    kubernetes.io/ingress.class: "alb"
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/load-balancer-name: "cloud-tech-demo"
    alb.ingress.kubernetes.io/group.name: "stage.group"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0252fff0795e2a5db,subnet-03f91c3cf7b88ca18
  namespace: grafana
spec:
  rules:
  - host: "grafana.cloud-tech-demo.pp.ua"
    http:
      paths:
      - pathType: "ImplementationSpecific"
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garafana-443
  annotations:
    kubernetes.io/ingress.class: "alb"
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/load-balancer-name: "cloud-tech-demo"
    alb.ingress.kubernetes.io/group.name: "stage.group"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0252fff0795e2a5db,subnet-03f91c3cf7b88ca18
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:196123732812:certificate/363e5123-9a95-4a5b-b500-8421180b84e6
  namespace: grafana
spec:
  rules:
  - host: "grafana.cloud-tech-demo.pp.ua"
    http:
      paths:
      - pathType: "ImplementationSpecific"
        backend:
          service:
            name: grafana
            port:
              number: 3000
