kubernetes/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-alb
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
    component: server
    release: prometheus
  sessionAffinity: None
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-80
  annotations:
    kubernetes.io/ingress.class: "alb"
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/load-balancer-name: "cloud-tech-demo"
    alb.ingress.kubernetes.io/group.name: "stage.group"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0503031fe1f1760d3,subnet-0a99b60981562602a
  namespace: prometheus
spec:
  rules:
  - host: "prometheus.cloud-tech-demo.pp.ua"
    http:
      paths:
      - pathType: "ImplementationSpecific"
        backend:
          service:
            name: prometheus-alb
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-alb-443
  annotations:
    kubernetes.io/ingress.class: "alb"
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/load-balancer-name: "cloud-tech-demo"
    alb.ingress.kubernetes.io/group.name: "stage.group"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0503031fe1f1760d3,subnet-0a99b60981562602a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:196123732812:certificate/363e5123-9a95-4a5b-b500-8421180b84e6
  namespace: prometheus
spec:
  rules:
  - host: "prometheus.cloud-tech-demo.pp.ua"
    http:
      paths:
      - pathType: "ImplementationSpecific"
        backend:
          service:
            name: prometheus-alb
            port:
              number: 9090
